fix #5 centering of headers on mobile

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -389,7 +389,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #blog-header .block {
   color: #E3E3E4;
   margin: 0 auto;
-  padding-left: 90px;
+  /* padding-left: 90px; */
   text-align: center;
 }
 #blog-header .block h1 {
@@ -430,7 +430,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #global-header .block {
   color: #E3E3E4;
   margin: 0 auto;
-  padding-left: 90px;
+  /* padding-left: 90px; */
   text-align: center;
 }
 #global-header .block h1 {
